better computing time processing
