# src/main/java/com/damdamdeo/formula/infrastructure/antlr/AntlrParseTreeGenerator.java
@@ -1,6 +1,7 @@
 package com.damdamdeo.formula.infrastructure.antlr;
 
 import com.damdamdeo.formula.domain.Formula;
+import com.damdamdeo.formula.domain.ParserExecutionProcessedIn;
 import io.smallrye.mutiny.Uni;
 import org.antlr.v4.runtime.tree.ParseTree;
 
@@ -9,20 +10,18 @@ import java.util.Objects;
 public interface AntlrParseTreeGenerator {
     Uni<GeneratorResult> generate(final Formula formula);
 
-    final class GeneratorResult {
-        private final Formula formula;
-        private final ParseTree parseTree;
-        private final AntlrSyntaxErrorListener antlrSyntaxErrorListener;
+    record GeneratorResult(Formula formula,
+                           ParseTree parseTree,
+                           AntlrSyntaxErrorListener antlrSyntaxErrorListener,
+                           ParserExecutionProcessedIn parserExecutionProcessedIn) {
 
-        public GeneratorResult(final Formula formula,
-                               final ParseTree parseTree,
-                               final AntlrSyntaxErrorListener antlrSyntaxErrorListener) {
-            this.formula = Objects.requireNonNull(formula);
-            this.parseTree = Objects.requireNonNull(parseTree);
-            this.antlrSyntaxErrorListener = Objects.requireNonNull(antlrSyntaxErrorListener);
+        public GeneratorResult {
+            Objects.requireNonNull(formula);
+            Objects.requireNonNull(parseTree);
+            Objects.requireNonNull(antlrSyntaxErrorListener);
         }
 
-        public ParseTree parseTree() throws AntlrSyntaxErrorException {
+        public ParseTree parseTree() {
             if (antlrSyntaxErrorListener.hasSyntaxError()) {
                 throw new AntlrSyntaxErrorException(formula, antlrSyntaxErrorListener.syntaxError());
             }
