# src/main/java/com/damdamdeo/formula/infrastructure/antlr/CachedAntlrParseTreeGenerator.java
@@ -5,6 +5,7 @@ import io.quarkus.cache.Cache;
 import io.smallrye.mutiny.Uni;
 
 import java.util.Objects;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 public final class CachedAntlrParseTreeGenerator implements AntlrParseTreeGenerator {
     private final AntlrParseTreeGenerator antlrParseTreeGenerator;
@@ -18,6 +19,16 @@ public final class CachedAntlrParseTreeGenerator implements AntlrParseTreeGenera
 
     @Override
     public Uni<GeneratorResult> generate(Formula formula) {
-        return cache.getAsync(formula, antlrParseTreeGenerator::generate);
+        final AtomicBoolean putInCache = new AtomicBoolean(false);
+        return cache.getAsync(formula, (__) -> {
+                    putInCache.set(true);
+                    return antlrParseTreeGenerator.generate(formula);
+                })
+                .map(generatorResult -> new GeneratorResult(
+                        generatorResult.formula(),
+                        generatorResult.parseTree(),
+                        generatorResult.antlrSyntaxErrorListener(),
+                        Boolean.TRUE.equals(putInCache.get()) ? generatorResult.parserExecutionProcessedIn() : null // In this case I consider that retrieving from cache takes zero time
+                ));
     }
 }
